overflows fix

--- a/src/shared/ui/mobileWorkPreview/ui/mobileWorkPreview.scss
+++ b/src/shared/ui/mobileWorkPreview/ui/mobileWorkPreview.scss
@@ -1,7 +1,6 @@
 .mobileWorkPreview{
-    position: fixed;
     width: 100dvw;
-    height: calc(100dvh);
+    height: 100%;
     z-index: 100000;
     top: 0;
     left: 0;
